# lodestar

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONES.md  IMPLEMENTATION_STATUS.md  LICENSE-APACHE  README.md  RELEASING.md
.cargo/: mutants.toml
.claude/: README.md
.claude/agents/: autor-tests.md  disenador-ux.md  guardian-contrato.md  historiador.md  implementador.md  juez-historia.md  planificador.md
.claude/skills/ciclo/: SKILL.md
.claude/skills/contrato/: SKILL.md
.claude/skills/historia/: SKILL.md
.claude/skills/juzgar/: SKILL.md
.claude/skills/mutantes/: SKILL.md
.claude/skills/planificar/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/ux/: SKILL.md
.github/workflows/: ci.yml  release.yml
contracts/: README.md  ipc.yml  mcp.yml
crates/lodestar-app/: Cargo.toml
crates/lodestar-app/src/: lib.rs
crates/lodestar-app/tests/: audit.rs  concept_ref.rs  document_ref.rs  eliminacion.rs  envelope.rs  error.rs  escala.rs  escritura.rs  grafo.rs  plan.rs  regen.rs  seleccion.rs  sin_regen.rs  validacion.rs
crates/lodestar-cli/: Cargo.toml
crates/lodestar-cli/src/: bundle_io.rs  commands.rs  git.rs  main.rs  sarif.rs
crates/lodestar-cli/tests/: cli.rs  e2e.rs
crates/lodestar-core/: Cargo.toml
crates/lodestar-core/src/: bundle.rs  conform.rs  diff.rs  document_set.rs  error.rs  eval.rs  filter.rs  generate.rs  graph.rs  lib.rs  links.rs  metadata.rs  model.rs  parse.rs  plan.rs  query.rs  render.rs  schema.rs  store_trait.rs  text.rs  types.rs
crates/lodestar-core/tests/: consulta.rs  core.rs  diagnosticos.rs  differential.rs  documento.rs  enlaces.rs  grafo.rs  metadata.rs
crates/lodestar-fixtures/: Cargo.toml
crates/lodestar-fixtures/src/: lib.rs
crates/lodestar-fixtures/tests/: fixtures.rs
crates/lodestar-mcp/: Cargo.toml
crates/lodestar-mcp/src/: main.rs  tools.rs
crates/lodestar-mcp/tests/: benchmark.rs  e2e_migracion.rs  grafo.rs  mcp.rs
crates/lodestar-store/: Cargo.toml
crates/lodestar-store/src/: error.rs  event.rs  index.rs  lib.rs  schema.rs  synth.rs  watch.rs
crates/lodestar-store/tests/: store.rs
crates/lodestar-vcs/: Cargo.toml  build.rs
crates/lodestar-vcs/src/: error.rs  lib.rs  net.rs
crates/lodestar-vcs/tests/: vcs.rs
crates/lodestar-workspace/: Cargo.toml
crates/lodestar-workspace/src/: config.rs  discovery.rs  error.rs  external_refs.rs  gitignore.rs  io.rs  journal.rs  lib.rs  lock.rs  publish.rs  receipts.rs  recovery.rs  runtime.rs  schema.rs  snapshot.rs  staging.rs  transaction.rs
crates/lodestar-workspace/tests/: config.rs  convivencia.rs  discovery.rs  enlaces.rs  reference_roots.rs  transactions.rs  workspace.rs
design/: README.md
docs/: REFACTOR.md  REFACTOR_DISENO_PROPUESTA.md  REFACTOR_PHASE_2.md  WORKFLOWS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: i18n.ts  okf.ts  query.ts  versions.ts
frontend/src/lib/components/: Backlinks.svelte  Changes.svelte  CodeEditor.svelte  Dialogs.svelte  Editor.svelte  Explorer.svelte  GraphIsland.svelte  GraphOverlay.svelte  Header.svelte  Inspector.svelte  MobileNav.svelte  StarMap.svelte  Toast.svelte  Tree.svelte  VerOverlay.svelte  Welcome.svelte
frontend/src/lib/editor/: cmSetup.ts  linkCompletion.ts
frontend/src/lib/graph/: starmap.ts
frontend/src/lib/ipc/: index.ts  mock.ts  types.ts
frontend/src/lib/stores/: bundle.ts  ui.ts
prototype/: index.html
prototype/harness/: package-lock.json  package.json  proto.mjs  run.mjs
requirements/: README.md  epica-00-scaffolding.md  epica-01-core.md  epica-02-cli.md  epica-03-store.md  epica-04-vcs.md  epica-05-workspace.md  epica-06-tauri-frontend.md  epica-07-mcp.md  epica-08-transversales.md  epica-09-reduccion-alcance.md  epica-10-esquemas-lectura.md  epica-11-grafo-impacto.md  epica-12-planificacion.md  epica-13-publicacion-recuperable.md  epica-14-integracion-evaluacion.md  epica-15-workspace-universal.md  epica-16-modelo-documental.md  epica-17-enlaces-grafo.md  epica-18-store-v2.md  epica-19-lenguaje-consulta.md  epica-20-inspeccion-validacion.md  epica-21-transacciones-genericas.md  epica-22-migracion-publicacion.md  paridad-auditoria.md  trazabilidad.md
scripts/: set-version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
