[workspace]
resolver = "2"
members = [
  "crates/lodestar-core",
  "crates/lodestar-store",
  "crates/lodestar-workspace",
  "crates/lodestar-app",
  "crates/lodestar-cli",
  "crates/lodestar-mcp",
  "crates/lodestar-fixtures",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dbareagimeno/lodestar"
homepage = "https://github.com/dbareagimeno/lodestar"
readme = "README.md"
rust-version = "1.80"

[workspace.dependencies]
# Núcleo (puro): serialización y utilidades sin I/O
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
thiserror = "1"
once_cell = "1"
regex = "1"
unicode-normalization = "0.1"
schemars = "0.8"
# Crates internos. Los publicables llevan `version` junto al `path`: cargo usa el `path`
# en el workspace y sustituye por la `version` (crates.io) al publicar.
lodestar-core = { path = "crates/lodestar-core", version = "0.2.0" }
lodestar-store = { path = "crates/lodestar-store", version = "0.2.0" }
lodestar-workspace = { path = "crates/lodestar-workspace", version = "0.2.0" }
lodestar-app = { path = "crates/lodestar-app", version = "0.2.0" }
# Solo-dev y `publish = false`: sin `version` para que cargo la descarte al empaquetar.
lodestar-fixtures = { path = "crates/lodestar-fixtures" }
# Fachadas / infra
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ignore = "0.4"

[workspace.lints.clippy]
all = "warn"

[profile.release]
opt-level = 3
lto = "thin"
