[package]
name = "lodestar-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fachada de escritorio (Tauri v2). Placeholder: el cableado de tauri se hace en E6 (requiere libs de sistema)."

[[bin]]
name = "lodestar-desktop"
path = "src/main.rs"

[dependencies]
lodestar-core = { workspace = true }
lodestar-workspace = { workspace = true }
# tauri, tauri-build: se añaden en E6.

[lints]
workspace = true
