[package]
name = "lodestar-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fachada de escritorio (Tauri v2): shell fino sobre lodestar-workspace. CERO lógica OKF."

[[bin]]
name = "lodestar-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lodestar-core = { workspace = true }
lodestar-workspace = { workspace = true }
lodestar-store = { workspace = true }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
