[package]
name = "lodestar-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Servicios de caso de uso finos sobre Workspace: envelope de protocolo y códigos de error."
keywords = ["okf", "knowledge-base", "local-first", "services", "markdown"]
categories = ["development-tools"]

[dependencies]
lodestar-core = { workspace = true }
lodestar-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
