[package]
name = "lodestar-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fachada CI: `lodestar check` como puerta con exit codes congelados."

[[bin]]
name = "lodestar"
path = "src/main.rs"

[dependencies]
lodestar-core = { workspace = true }
lodestar-workspace = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ignore = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
lodestar-fixtures = { workspace = true }
