[package]
name = "lodestar-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Núcleo puro de lodestar: modelo, conformidad, links, query, grafo, generación, export y diff OKF. Sin I/O, DB, git ni runtime."
keywords = ["okf", "knowledge-base", "markdown", "conformance", "graph"]
categories = ["text-processing", "parsing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
unicode-normalization = { workspace = true }
schemars = { workspace = true, optional = true }
# NO opcional desde E17-H01: la extracción de enlaces del core lo necesita siempre.
pulldown-cmark = { workspace = true }

[features]
default = []
# Gatea #[derive(JsonSchema)] en los DTO públicos (lo consume el MCP).
schemars = ["dep:schemars"]
# Render de markdown a HTML para el preview (el saneado DOMPurify vive en el frontend).
# El parser ya es una dependencia fija; la feature solo enciende su serializador a HTML.
render = ["pulldown-cmark/html"]

[lints]
workspace = true

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# Solo-dev: fixtures compartidas de los tests. El ciclo dev-only lo permite cargo.
lodestar-fixtures = { workspace = true }
