[package]
name = "lodestar-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Workspaces de ejemplo reusables por los tests de todos los crates."
# Solo para tests: nunca se publica en crates.io.
publish = false

[dependencies]
lodestar-core = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
