[package]
name = "lodestar-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Fachada de agentes (MCP/stdio) sobre Workspace. Semántica, no CRUD."
keywords = ["okf", "mcp", "knowledge-base", "agents", "markdown"]
categories = ["development-tools"]

[[bin]]
name = "lodestar-mcp"
path = "src/main.rs"

[dependencies]
lodestar-core = { workspace = true }
lodestar-workspace = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
