[package]
name = "lodestar-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Cache derivada (SQLite/FTS5) + watcher. Dueño único del DDL .lodestar/index.db. rusqlite vive SOLO aquí."
keywords = ["okf", "knowledge-base", "sqlite", "fts5", "cache"]
categories = ["database", "caching"]

[dependencies]
lodestar-core = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
ignore = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
notify-debouncer-full = "0.3"
crossbeam-channel = "0.5"

[dev-dependencies]
lodestar-fixtures = { workspace = true }
tempfile = "3"

[lints]
workspace = true
