[package]
name = "lodestar-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Glue: compone core + store + vcs. Handle unificado, único escritor y bus de eventos."
keywords = ["okf", "knowledge-base", "local-first", "watcher", "markdown"]
categories = ["filesystem", "development-tools"]

[dependencies]
lodestar-core = { workspace = true }
lodestar-store = { workspace = true }
lodestar-vcs = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5"
toml = "0.8"
serde_yaml = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
default = []
# Gatea #[derive(JsonSchema)] en `ExternalReference` (E11-H04), consumido por `lodestar-app` para
# el `outputSchema` de `knowledge_get` — mismo patrón que la feature homónima de `lodestar-core`.
schemars = ["dep:schemars"]
# Arnés de crash-recovery (E13-H06): habilita la sonda de fallo (`FailPoint`) y la batería de tests
# de recuperación determinista de `tests/transactions.rs`. Solo test/plumbing — NO cablea lógica de
# recovery en producción. La sonda de fallo de PRODUCCIÓN que el implementador thread-eará por el
# orquestador transaccional también vivirá tras esta feature (contrato documentado en los tests).
test-failpoints = []

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
serde_yaml = { workspace = true }
# Solo para fabricar a mano una cache con esquema viejo en el test de regresión e2e.
rusqlite = { version = "0.32", features = ["bundled"] }
